--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_WS_BASE_URL=http://localhost:3010/v1/api
+# REACT_APP_WS_BASE_URL=https://api.qspeco.com/api/v1
+REACT_APP_WS_BASE_URL=http://localhost:3010/api/v1
