--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # REACT_APP_WS_BASE_URL=https://api.qspeco.com/api/v1
-REACT_APP_WS_BASE_URL=http://localhost:3010/api/v1
+# REACT_APP_WS_BASE_URL=http://localhost:3010/api/v1
+REACT_APP_WS_BASE_URL=https://qst-gas-station-be.vercel.app/api/v1
