--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
