--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # REACT_APP_WS_BASE_URL=https://api.qspeco.com/api/v1
-REACT_APP_WS_BASE_URL=http://localhost:3010/api/v1
+REACT_APP_WS_BASE_URL=http://192.168.100.217:3010/api/v1
