--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
+    "@internationalized/date": "^3.5.6",
+    "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -16,12 +20,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-types/datepicker": "^3.8.3",
+    "@react-types/shared": "^3.25.0",
     "@tanstack/react-table": "^8.17.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.11.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
